--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-Community composition from RAW whole community DNA extractions and Sanger sequencing
+Collaboration between @edielivon (Etienne Low-Decarie) and @cjbayesian (Corey Chivers)
+
+Please contact us if you are interested in testing this method on community samples.
+
+etienne.low-decarie@mail.mcgill.ca
+
+Community composition from RAW whole community DNA extractions and Sanger sequencing.
