a zoo of optimization methods was added
At this point, I have tested many many optimization methods and want to
clear some out.  Return to this point if methods need to be recovered.

--- a/README
+++ b/README
@@ -6,3 +6,14 @@ Please contact us if you are interested in testing this method on community samp
 
 etienne.low-decarie@mail.mcgill.ca
 
+
+
+
+
+
+
+Related documentation:
+
+Relavant stack overflow questions:
+  -  http://stackoverflow.com/questions/11110848/how-to-optimize-for-integer-parameters-and-other-discontinuous-parameter-space
+  -  http://stackoverflow.com/questions/10826625/playing-perfect-tetris-how-to-align-and-scale-two-curves-using-scaling-and-tran
